# classic-gl

./: .gitmodules  CMakeLists.txt  default.nix  manifest.json
libs/: CMakeLists.txt
src/: main.cpp
src/include/: buffer.hpp  classic.hpp  ecs.hpp  resources.hpp  shader.hpp  texture.hpp  utils.hpp
src/shaders/: direct.vert  direct_tex.vert  image.frag  image_colorized.frag  iso_tilemap.frag  iso_tilemap.vert  sheet.frag  solid.frag
